--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -134,3 +134,9 @@
     </div>
   </div>
 --></div>
+
+<div id="mixed_content_help_template"><!--
+  <div class="mixed-content-help">
+    Mixed Content Enabled&#160;&#160;--&#160;&#160;Type '<' for elements or highlight text to wrap
+  </div>
+--></div>
