Preserve new lines for textarea content in read only context;

--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -34,7 +34,8 @@ fieldset {
 }
 
 .control-group .controls.label-only {
-  line-height: 28px;
+  line-height: 18px;
+  padding-top: 6px;
 }
 
 /* identifier fields */
