--- a/frontend/app/views/shared/_tree.html.erb
+++ b/frontend/app/views/shared/_tree.html.erb
@@ -201,14 +201,25 @@
           </a>
           <ul class="dropdown-menu">
             {if !parent.hasClass("root")}
-              <li><a href="javascript:void(0);" class="move-node" data-target-node-id="${parent.parents("li:first").attr("id")}"><span class="icon-arrow-up"></span> Up</a></li>
+              <li><a href="javascript:void(0);" class="move-node move-node-up-level" data-target-node-id="${parent.parents("li:first").attr("id")}" data-target-index="${parent.index()}"><span class="icon-arrow-left"></span> Up a Level</a></li>
             {/if}
+
+            {var children_count = parent.find("> ul > li").length}
+            {if children_count > 1}
+              {if node.index() > 0}
+                <li><a href="javascript:void(0);" class="move-node move-node-up" data-target-node-id="${parent.attr("id")}" data-target-index="${node.index()-1}"><span class="icon-arrow-up"></span> Up</a></li>
+              {/if}
+              {if node.index() < children_count - 1}
+                <li><a href="javascript:void(0);" class="move-node move-node-down" data-target-node-id="${parent.attr("id")}" data-target-index="${node.index()+1}"><span class="icon-arrow-down"></span> Down</a></li>
+              {/if}
+            {/if}
+
             {if defined('sibling_ids') && sibling_ids.length > 0}
               <li class="dropdown-submenu">
-                <a href="javascript:void(0);"><span class="icon-arrow-down"></span> Into...</a>
+                <a href="javascript:void(0);"><span class="icon-arrow-right"></span> Down Into...</a>
                 <ul class="dropdown-menu">
                 {for sibling_id in sibling_ids}
-                  <li><a href="javascript:void(0);" class="move-node" data-target-node-id="${sibling_id}">${$("a:first", "#"+sibling_id).attr("title")}</a></li>
+                  <li><a href="javascript:void(0);" class="move-node move-node-down-into" data-target-node-id="${sibling_id}">${$("a:first", "#"+sibling_id).attr("title")}</a></li>
                 {/for}
                 </ul>
               </li>
