Auto generate rights_statement#identifier through the frontend or if it is not provided via an import

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -90,7 +90,7 @@ h2 > .label {
   .identifier-display-part {
     border: 1px solid #F6F6F6;
     background-color: #FCFCFC;
-    padding: 2px 4px;
+    padding: 4px;
     margin-right: 4px;
     min-width: 60px;
     float: left;
