Fix error messages sticking beyond current pane (tree layout); Setup DOC controller to set FIND_OPTS if refetch is ever triggered;

--- a/frontend/app/views/shared/_form_messages.html.erb
+++ b/frontend/app/views/shared/_form_messages.html.erb
@@ -36,6 +36,9 @@
              setupErrorMessage(idx, elt, "warning");
            });
          }
+
+        // unbind the event (only needs to run once)
+         $(document).unbind("ajaxComplete", callback);
        };
 
        $(callback);
