--- a/frontend/app/views/search/_results.html.erb
+++ b/frontend/app/views/search/_results.html.erb
@@ -1,2 +1,39 @@
-Query: <%= params[:q] %><br/>
-Type: <%= params[:type] %>
+<%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Search"]} %>
+<div class="row-fluid">
+  <div class="span3">
+    Query: <%= params[:q] %><br/>
+    Type: <%= params[:type] %>
+  </div>
+  <div class="span9 record-pane">
+    <h2>Search Results</h2>
+    <% if @search_data.has_key?('results') && @search_data['results'].length  > 0 %>
+      <table class="table table-striped table-bordered table-condensed">
+        <thead>
+        <tr>
+          <th>Title</th>
+          <th width="70px"><!-- actions --></th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @search_data['results'].each do |accession| %>
+          <tr>
+            <td>
+
+            </td>
+            <td>
+              <div class="btn-group" style="float: right">
+
+              </div>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+      <%= render :partial => "shared/pagination" %>
+    <% else %>
+      <p class="alert alert-info">
+        There are where no search results for <em><%= params[:q] %></em>.
+      </p>
+    <% end %>
+  </div>
+</div>
