--- a/frontend/app/views/search/_results.html.erb
+++ b/frontend/app/views/search/_results.html.erb
@@ -10,20 +10,24 @@
       <table class="table table-striped table-bordered table-condensed">
         <thead>
         <tr>
+          <th>Record Type</th>
           <th>Title</th>
           <th width="70px"><!-- actions --></th>
         </tr>
         </thead>
         <tbody>
-        <% @search_data['results'].each do |accession| %>
+        <%= render :partial => "shared/pagination_summary" %>
+        <% @search_data['results'].each do |result| %>
           <tr>
             <td>
-
+              <%=  I18n.t("#{result["type"]}._html.singular") %>
             </td>
             <td>
-              <div class="btn-group" style="float: right">
+              <% if result["suppressed"] %><span class="label label-info">Suppressed</span><% end %>
+              <%=  result["title"] %>
+            </td>
+            <td>
 
-              </div>
             </td>
           </tr>
         <% end %>
