--- a/frontend/app/views/search/_results.html.erb
+++ b/frontend/app/views/search/_results.html.erb
@@ -27,7 +27,12 @@
               <%=  result["title"] %>
             </td>
             <td>
-
+              <div class="btn-group" style="float: right">
+                <%= link_to "View", jsonmodel_view_url_for(result), :class => "btn btn-mini" %>
+                <% if user_can?('update_repository') %>
+                  <%= link_to "Edit", jsonmodel_edit_url_for(result), :class => "btn btn-mini" %>
+                <% end %>
+              </div>
             </td>
           </tr>
         <% end %>
