--- a/frontend/app/views/shared/_pagination.html.erb
+++ b/frontend/app/views/shared/_pagination.html.erb
@@ -1,31 +1,51 @@
+<%
+  page_limit = 10
+
+  first_page = [@search_data['this_page'] - page_limit / 2, 1].max
+  last_page = [first_page+page_limit, @search_data['last_page']].min
+
+  page_range = (first_page..last_page)
+%>
+
 <% if @search_data %>
 
   <div class="pagination pagination-small pagination-centered">
     <ul>
+      <% if not page_range.cover?(1) %>
+        <li>
+          <%= link_to "First".html_safe, params.merge(:page => 1) %>
+        </li>
+      <% end %>
+
       <% if @search_data['this_page'] > 1 %>
         <li>
-          <%= link_to "&#171;".html_safe, :page => @search_data['this_page'] - 1 %>
+          <%= link_to "&#171;".html_safe, params.merge(:page => @search_data['this_page'] - 1) %>
         </li>
       <% else  %>
         <li class="disabled"><a href="#">&#171;</a></li>
       <% end %>
 
-      <% (1..@search_data['last_page']).each do |i| %>
+      <% page_range.each do |i| %>
         <% if @search_data['this_page'] === i %>
           <li class="active"><a href="#"><%= i %></a></li>
         <% else %>
           <li>
-            <%= link_to i, :page => i %>
+            <%= link_to i, params.merge(:page => i) %>
           </li>
         <% end %>
       <% end %>
 
       <% if @search_data['this_page'] != @search_data['last_page'] %>
         <li>
-          <%= link_to "&#187;".html_safe, :page => @search_data['this_page'] + 1 %>
+          <%= link_to "&#187;".html_safe, params.merge(:page => @search_data['this_page'] + 1) %>
         </li>
       <% else %>
         <li class="disabled"><a href="#">&#187;</a></li>
+      <% end %>
+      <% if not page_range.cover?(@search_data['last_page']) %>
+        <li>
+          <%= link_to "Last".html_safe, params.merge(:page => @search_data['last_page']) %>
+        </li>
       <% end %>
     </ul>
   </div>
