--- a/frontend/app/views/shared/_pagination_summary.html.erb
+++ b/frontend/app/views/shared/_pagination_summary.html.erb
@@ -1,5 +1,5 @@
 <% if @search_data %>
   <div class="pull-left">
-    Pagination Summary goes here
+    Showing <strong><%= @search_data["offset_first"] %></strong> - <strong><%= @search_data["offset_last"] %></strong> of <strong><%= @search_data["total_hits"] %></strong> Results
   </div>
 <% end %>
