--- a/frontend/app/views/search/_results.html.erb
+++ b/frontend/app/views/search/_results.html.erb
@@ -10,7 +10,7 @@
       <table class="table table-striped table-bordered table-condensed">
         <thead>
         <tr>
-          <th>Record Type</th>
+          <th width="160px">Record Type</th>
           <th>Title</th>
           <th width="70px"><!-- actions --></th>
         </tr>
