--- a/frontend/app/assets/stylesheets/archivesspace/token-input.less
+++ b/frontend/app/assets/stylesheets/archivesspace/token-input.less
@@ -211,7 +211,11 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
   .agent_software .icon-token {background-position: -360px -144px;}
   .agent_corporate_entity .icon-token {background-position: -432px -144px;}
   .agent_family .icon-token {background-image: url(../../archivesspace/icon-family.png); background-position: 0 0;}
+  .resource .icon-token {background-position: -264px -24px;}
   .archival_object .icon-token {background-position: -24px -24px;}
+  .digital_object .icon-token {background-position: -384px -120px;}
+  .digital_object_component .icon-token {background-position: -456px -24px;}
+  .accession .icon-token {background-position: -168px -24px;}
   .subject .icon-token {display: none;}
   .location .icon-token {display: none;}
 }
