--- a/frontend/app/views/linked_records/_template.html.erb
+++ b/frontend/app/views/linked_records/_template.html.erb
@@ -1,6 +1,15 @@
+<%
+  aliases = {
+    "collection_management" => "collection_management_record"
+  }
+
+  target_object_type = aliases.has_key?(form.obj["jsonmodel_type"]) ? aliases[form.obj["jsonmodel_type"]] : form.obj["jsonmodel_type"]
+%>
 <% define_template "linked_record" do |form| %>
   <div class="subrecord-form-fields">
-    <%= form.label_and_select("role", form.options_for("role", JSONModel(:event).schema["properties"]["linked_records"]["items"]["properties"]["role"]["enum"])) %>
-    <%= render :partial => "events/record_linker", :locals => {:form => form} %>
+    <% if target_object_type === "event" %>
+      <%= form.label_and_select("role", form.options_for("role", JSONModel(:event).schema["properties"]["linked_records"]["items"]["properties"]["role"]["enum"])) %>
+    <% end %>
+    <%= render :partial => "#{target_object_type.pluralize}/record_linker", :locals => {:form => form} %>
   </div>
 <% end %>
