--- a/frontend/app/views/collection_management_records/index.html.erb
+++ b/frontend/app/views/collection_management_records/index.html.erb
@@ -10,7 +10,7 @@
         <% end %>
       </div>
       <h2>Collection Management Records</h2>
-      <% if @collection_managements.length > 0 %>
+     <% if @search_data.has_key?('results') && @search_data['results'].length  > 0 %>
          <table class="table table-striped table-bordered table-condensed">
            <thead>
              <tr>
@@ -23,7 +23,7 @@
              </tr>
            </thead>
            <tbody>
-              <% @collection_managements.each do |cmr| %>
+              <% @search_data['results'].each do |cmr| %>
               <tr>
                <td><%= cmr.id %></td>
                <td><%= I18n.t("collection_management.processing_priority_#{cmr.processing_priority}") %></td>
