--- a/frontend/app/views/search/_results.html.erb
+++ b/frontend/app/views/search/_results.html.erb
@@ -41,7 +41,7 @@
       <%= render :partial => "shared/pagination" %>
     <% else %>
       <p class="alert alert-info">
-        There are where no search results for <em><%= params[:q] %></em>.
+        There were no search results for <em><%= params[:q] %></em>.
       </p>
     <% end %>
   </div>
