Set the page's title for all major templates

--- a/frontend/app/views/accessions/show.html.erb
+++ b/frontend/app/views/accessions/show.html.erb
@@ -1,3 +1,4 @@
+<% set_title("Accessions | #{@accession.title}") %>
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Accessions", :controller => :accessions, :action => :index), @accession.title]} %>
 <div class="row-fluid">
    <div class="span3">
