--- a/frontend/app/views/agents/index.html.erb
+++ b/frontend/app/views/agents/index.html.erb
@@ -1,3 +1,5 @@
+<% set_title("Agents") %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Browse Agents"]} %>
 <div class="row-fluid">
    <div class="span3">
