--- a/frontend/app/views/collection_management_records/index.html.erb
+++ b/frontend/app/views/collection_management_records/index.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Collection Management Records" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Browse Collection Management Records"]} %>
 <div class="row-fluid">
    <div class="span3">
