--- a/frontend/app/views/digital_objects/index.html.erb
+++ b/frontend/app/views/digital_objects/index.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Digital Objects" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Browse Digital Objects"]} %>
 <div class="row-fluid">
    <div class="span3">
