--- a/frontend/app/views/events/index.html.erb
+++ b/frontend/app/views/events/index.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Events" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Browse Events"]} %>
 <div class="row-fluid">
    <div class="span3">
