--- a/frontend/app/views/groups/index.erb
+++ b/frontend/app/views/groups/index.erb
@@ -1,3 +1,5 @@
+<% set_title "Groups" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Manage Groups"]} %>
 
 <div class="row-fluid">
