--- a/frontend/app/views/groups/new.erb
+++ b/frontend/app/views/groups/new.erb
@@ -1,3 +1,5 @@
+<% set_title "Groups | New" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Manage Groups", :controller => :groups, :action => :index), "New Group"]} %>
 
 <div class="row-fluid">
