--- a/frontend/app/views/resources/index.html.erb
+++ b/frontend/app/views/resources/index.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Resources" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Browse Resources"]} %>
 <div class="row-fluid">
    <div class="span3">
