--- a/frontend/app/views/subjects/index.html.erb
+++ b/frontend/app/views/subjects/index.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Subjects" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Browse Subjects"]} %>
 <div class="row-fluid">
    <div class="span3">
