--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -1,3 +1,5 @@
+<% set_title("Accessions") %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Browse Accessions"]} %>
 <div class="row-fluid">
    <div class="span3">
