--- a/frontend/app/views/accessions/new.html.erb
+++ b/frontend/app/views/accessions/new.html.erb
@@ -1,3 +1,4 @@
+<% set_title("Accessions | New") %>
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Accessions", :controller => :accessions, :action => :index),"New Accession"]} %>
 
 <%= form_for @accession, :as => "accession", :url => {:action => :create}, :html => {:class => 'form-horizontal', :id => "accession_form"} do |f| %>
