--- a/frontend/app/views/agents/show.html.erb
+++ b/frontend/app/views/agents/show.html.erb
@@ -1,3 +1,5 @@
+<% set_title("Agents | #{@agent.names[0]["sort_name"]} (#{I18n.t("agent.agent_type.#{@agent.agent_type}")})") %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Agents", :controller => :agents, :action => :index), @agent.names[0]['sort_name']]} %>
 <div class="row-fluid">
    <div class="span3">
