--- a/frontend/app/views/collection_management_records/new.html.erb
+++ b/frontend/app/views/collection_management_records/new.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Collection Management Records | New" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => ["New Collection Management Record"]} %>
 
 <%= form_for @collection_management, :as => "collection_management", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
@@ -7,7 +9,7 @@
         <%= render :partial => "sidebar" %>
       </div>
       <div class="span9 record-pane">
-        <h2><%= "New Collection Management Record" %>  <span class="label label-info">Collection Management Record</span></h2>
+        <h2><%= @title %>  <span class="label label-info">Collection Management Record</span></h2>
 
         <%= render :partial => "collection_management_records/form", :locals => {:form => form} %>
         <div class="form-actions">
