--- a/frontend/app/views/digital_objects/edit.html.erb
+++ b/frontend/app/views/digital_objects/edit.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Digital Objects | #{@digital_object.title} | Edit" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Digital Objects", :controller => :digital_objects, :action => :index), link_to(@digital_object.title, :controller => :digital_objects, :action => :show, :id => @digital_object.id), "Edit"]} %>
 
 <div class="row-fluid">
