--- a/frontend/app/views/digital_objects/new.html.erb
+++ b/frontend/app/views/digital_objects/new.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Digital Objects | New" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Digital Objects", :controller => :digital_objects, :action => :index),"New Digital Object"]} %>
 
 <%= form_for @digital_object, :as => "digital_object", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
