--- a/frontend/app/views/events/edit.html.erb
+++ b/frontend/app/views/events/edit.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Events | #{@event.id} | Edit" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Events", :controller => :events, :action => :index ), "New Event"]} %>
 
 <%= form_for @event, :as => "event", :url => {:action => :update}, :html => {:class => 'form-horizontal'} do |f| %>
