--- a/frontend/app/views/events/new.html.erb
+++ b/frontend/app/views/events/new.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Events | New" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => ["New Event"]} %>
 
 <%= form_for @event, :as => "event", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
