--- a/frontend/app/views/locations/edit.html.erb
+++ b/frontend/app/views/locations/edit.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Locations | #{@location.id} | Edit" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Locations", :controller => :locations, :action => :index),"New Location"]} %>
 
 <%= form_for @location, :as => "location", :url => {:action => :update}, :html => {:class => 'form-horizontal'} do |f| %>
