--- a/frontend/app/views/locations/index.html.erb
+++ b/frontend/app/views/locations/index.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Locations" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Browse Locations"]} %>
 <div class="row-fluid">
    <div class="span3">
