--- a/frontend/app/views/resources/show.html.erb
+++ b/frontend/app/views/resources/show.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Resources | #{@resource.title}" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Resources", :controller => :resources, :action => :index), @resource.title]} %>
 <div class="row-fluid">
   <div class="span12">
