--- a/frontend/app/views/subjects/edit.html.erb
+++ b/frontend/app/views/subjects/edit.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Subjects | #{@subject.display_string} | Edit" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Subjects", :controller => :subjects, :action => :index),"New Subject"]} %>
 
 <%= form_for @subject, :as => "subject", :url => {:action => :update}, :html => {:class => 'form-horizontal'} do |f| %>
@@ -7,7 +9,7 @@
         <%= render :partial => "sidebar" %>
       </div>
       <div class="span9 record-pane">
-        <h2><%= "New Subject" %>  <span class="label label-info">Subject</span></h2>
+        <h2><%= @subject.display_string %>  <span class="label label-info">Subject</span></h2>
         <br/>
         <%= render :partial => "subjects/form", :locals => {:form => form} %>
         <div class="form-actions">
