--- a/frontend/app/views/subjects/show.html.erb
+++ b/frontend/app/views/subjects/show.html.erb
@@ -1,3 +1,5 @@
+<% set_title "Subjects | #{@subject.display_string}" %>
+
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Subjects", :controller => :subjects, :action => :index), @subject.display_string]} %>
 <div class="row-fluid">
    <div class="span3">
