WIP introduce setup_context for all major templates

--- a/frontend/app/views/agents/edit.html.erb
+++ b/frontend/app/views/agents/edit.html.erb
@@ -1,6 +1,4 @@
-<% set_title("Agents | #{@agent.names[0]["sort_name"]} (#{I18n.t("agent.agent_type.#{@agent.agent_type}")}) | Edit") %>
-
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Agents", :controller => :agents, :action => :index), link_to(@agent.names[0]["sort_name"], :id => @agent.id, :controller => :agents, :action => :show, :type => @agent.agent_type), "Edit"]} %>
+<%= setup_context :object => @agent, :controller => :agents, :type => @agent.agent_type, :title => @agent.names[0]["sort_name"] %>
 
 <%= form_for @agent, :as => "agent", :url => {:action => :update}, :html => {:class => 'form-horizontal', :id => "agent_form"} do |f| %>
   <%= form_context :agent, @agent.to_hash(true) do |form| %>
