--- a/frontend/app/views/agents/index.html.erb
+++ b/frontend/app/views/agents/index.html.erb
@@ -1,6 +1,5 @@
-<% set_title("Agents") %>
+<%= setup_context :title => I18n.t("agent._html.plural") %>
 
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Browse Agents"]} %>
 <div class="row-fluid">
    <div class="span3">
       The facets/search filters will go here.
