--- a/frontend/app/views/collection_management_records/index.html.erb
+++ b/frontend/app/views/collection_management_records/index.html.erb
@@ -1,6 +1,5 @@
-<% set_title "Collection Management Records" %>
+<%= setup_context :title => I18n.t("collection_management._html.plural") %>
 
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Browse Collection Management Records"]} %>
 <div class="row-fluid">
    <div class="span3">
       The facets/search filters will go here.
