--- a/frontend/app/views/digital_objects/index.html.erb
+++ b/frontend/app/views/digital_objects/index.html.erb
@@ -1,6 +1,5 @@
-<% set_title "Digital Objects" %>
+<%= setup_context :title => I18n.t("digital_object._html.plural") %>
 
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Browse Digital Objects"]} %>
 <div class="row-fluid">
    <div class="span3">
       The facets/search filters will go here.
