--- a/frontend/app/views/groups/index.erb
+++ b/frontend/app/views/groups/index.erb
@@ -1,6 +1,4 @@
-<% set_title "Groups" %>
-
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Manage Groups"]} %>
+<%= setup_context :title => I18n.t("group._html.plural") %>
 
 <div class="row-fluid">
    <div class="span3">
