--- a/frontend/app/views/resources/index.html.erb
+++ b/frontend/app/views/resources/index.html.erb
@@ -1,6 +1,5 @@
-<% set_title "Resources" %>
+<%= setup_context :title => I18n.t("resource._html.plural") %>
 
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Browse Resources"]} %>
 <div class="row-fluid">
    <div class="span3">
       The facets/search filters will go here.
