--- a/frontend/app/views/welcome/index.html.erb
+++ b/frontend/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<% set_title "Home" %>
+<%= setup_context :title => "Home", :suppress_breadcrumb => true %>
 
 <div class="row-fluid">
    <% if flash[:error] %>
