--- a/frontend/app/views/accessions/edit.html.erb
+++ b/frontend/app/views/accessions/edit.html.erb
@@ -1,5 +1,3 @@
-<% set_title("Accessions | #{@accession.title} | Edit") %>
-
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Accessions", :controller => :accessions, :action => :index), link_to(@accession.title, :controller => :accessions, :action => :show, :id => @accession.id), "Edit"]} %>
+<%= setup_context(:object => @accession) %>
 
 <%= render :partial => "accessions/edit_inline" %>
