--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -1,6 +1,5 @@
-<% set_title("Accessions") %>
+<%= setup_context(:title => I18n.t("accession._html.plural")) %>
 
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => ["Browse Accessions"]} %>
 <div class="row-fluid">
    <div class="span3">
       The facets/search filters will go here.
