--- a/frontend/app/views/collection_management_records/new.html.erb
+++ b/frontend/app/views/collection_management_records/new.html.erb
@@ -1,6 +1,4 @@
-<% set_title "Collection Management Records | New" %>
-
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => ["New Collection Management Record"]} %>
+<%= setup_context(:object => @collection_management, :controller => :collection_management_records) %>
 
 <%= form_for @collection_management, :as => "collection_management", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
   <%= form_context :collection_management, @collection_management do |form| %>
@@ -9,7 +7,7 @@
         <%= render :partial => "sidebar" %>
       </div>
       <div class="span9 record-pane">
-        <h2><%= @title %>  <span class="label label-info">Collection Management Record</span></h2>
+        <h2><%= "New Collection Management Record" %>  <span class="label label-info">Collection Management Record</span></h2>
 
         <%= render :partial => "collection_management_records/form", :locals => {:form => form} %>
         <div class="form-actions">
