--- a/frontend/app/views/digital_objects/edit.html.erb
+++ b/frontend/app/views/digital_objects/edit.html.erb
@@ -1,6 +1,4 @@
-<% set_title "Digital Objects | #{@digital_object.title} | Edit" %>
-
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Digital Objects", :controller => :digital_objects, :action => :index), link_to(@digital_object.title, :controller => :digital_objects, :action => :show, :id => @digital_object.id), "Edit"]} %>
+<%= setup_context :object => @digital_object %>
 
 <div class="row-fluid">
   <div class="span12">
