--- a/frontend/app/views/digital_objects/show.html.erb
+++ b/frontend/app/views/digital_objects/show.html.erb
@@ -1,6 +1,5 @@
-<% set_title "Digital Objects | #{@digital_object.title}" %>
+<%= setup_context :object => @digital_object %>
 
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Digital Objects", :controller => :digital_objects, :action => :index), @digital_object.title]} %>
 <div class="row-fluid">
   <div class="span12">
     <%= render :partial => "shared/tree", :locals => {:read_only => true} %>
