--- a/frontend/app/views/events/new.html.erb
+++ b/frontend/app/views/events/new.html.erb
@@ -1,6 +1,4 @@
-<% set_title "Events | New" %>
-
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => ["New Event"]} %>
+<%= setup_context :object => @event %>
 
 <%= form_for @event, :as => "event", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
   <%= form_context :event, @event do |form| %>
