--- a/frontend/app/views/groups/edit.erb
+++ b/frontend/app/views/groups/edit.erb
@@ -1,4 +1,4 @@
-<%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Manage Groups", :controller => :groups, :action => :index), "Edit Group"]} %>
+<%= setup_context :object => @group, :title => (!@group.description.empty? ? @group.description : "Edit Group") %>
 
 <div class="row-fluid">
   <div class="span3">
@@ -9,7 +9,7 @@
 
     <%= form_for @group, :as => "group", :url => {:action => :update, :id => @group.id}, :html => {:class => 'form-horizontal'} do |f| %>
       <%= form_context :group, @group.to_hash(true) do |form| %>
-				<%= render :partial => "shared/form_messages", :locals => {:form => form} %>
+        <%= render :partial => "shared/form_messages", :locals => {:form => form} %>
         <%= render :partial => "groups/form", :locals => {:form => form} %>
       <% end %>
     <% end %>
