--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -17,6 +17,11 @@ h2 > .label {
 .breadcrumb {
   margin-top: -@baseLineHeight;
   .box-shadow(~"inset 0 -1px 0 rgba(0,0,0,.05), 0 1px 10px rgba(0,0,0,.05)");
+
+  .return-to-search {
+    margin-top: -4px;
+  }
+
 }
 
 .navbar .brand {
